Converting tests to AssertJ for exercises starting with B (#2116)