@@ -1,11 +1,9 @@
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
 
 import org.junit.Ignore;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -17,75 +15,63 @@ public class BinarySearchTest {
 
         BinarySearch search = new BinarySearch(listOfUnitLength);
 
-        assertEquals(0, search.indexOf(6));
+        assertThat(search.indexOf(6)).isEqualTo(0);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void findsAValueInTheMiddleOfAnArray() throws ValueNotFoundException {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
-        assertEquals(3, search.indexOf(6));
+        assertThat(search.indexOf(6)).isEqualTo(3);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void findsAValueAtTheBeginningOfAnArray() throws ValueNotFoundException {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
-        assertEquals(0, search.indexOf(1));
+        assertThat(search.indexOf(1)).isEqualTo(0);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void findsAValueAtTheEndOfAnArray() throws ValueNotFoundException {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
-        assertEquals(6, search.indexOf(11));
+        assertThat(search.indexOf(11)).isEqualTo(6);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void findsAValueInAnArrayOfOddLength() throws ValueNotFoundException {
-        List<Integer> sortedListOfOddLength = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 634)
-        );
+        List<Integer> sortedListOfOddLength = List.of(1, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 634);
 
         BinarySearch search = new BinarySearch(sortedListOfOddLength);
 
-        assertEquals(9, search.indexOf(144));
+        assertThat(search.indexOf(144)).isEqualTo(9);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void findsAValueInAnArrayOfEvenLength() throws ValueNotFoundException {
-        List<Integer> sortedListOfEvenLength = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377)
-        );
+        List<Integer> sortedListOfEvenLength = List.of(1, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377);
 
         BinarySearch search = new BinarySearch(sortedListOfEvenLength);
 
-        assertEquals(5, search.indexOf(21));
+        assertThat(search.indexOf(21)).isEqualTo(5);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void identifiesThatAValueIsNotFoundInTheArray() {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
@@ -100,9 +86,7 @@ public class BinarySearchTest {
     @Ignore("Remove to run test")
     @Test
     public void aValueSmallerThanTheArraysSmallestValueIsNotFound() {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
@@ -117,9 +101,7 @@ public class BinarySearchTest {
     @Ignore("Remove to run test")
     @Test
     public void aValueLargerThanTheArraysSmallestValueIsNotFound() throws ValueNotFoundException {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 3, 4, 6, 8, 9, 11)
-        );
+        List<Integer> sortedList = List.of(1, 3, 4, 6, 8, 9, 11);
 
         BinarySearch search = new BinarySearch(sortedList);
 
@@ -149,9 +131,7 @@ public class BinarySearchTest {
     @Ignore("Remove to run test")
     @Test
     public void nothingIsFoundWhenTheLeftAndRightBoundCross() throws ValueNotFoundException {
-        List<Integer> sortedList = Collections.unmodifiableList(
-                Arrays.asList(1, 2)
-        );
+        List<Integer> sortedList = List.of(1, 2);
 
         BinarySearch search = new BinarySearch(sortedList);
 
